Update web app URL in index.html

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     </div>
 
     <script>
-        const WEB_APP_URL = 'YOUR_APPS_SCRIPT_WEB_APP_URL_HERE';
+        const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwK6kQtPDjXL3Wq7X5glsCJHEgU9MX7R3P0kILBVJj5kLr2BWySu3prSKcZtg7hPoGnAQ/exec';
         let config = { webAppUrl: WEB_APP_URL };
         let trackCount = 0;
         let contributorCount = 0;
