Changed Name labelling Artist name

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             
                             <div class="form-row">
                                 <div class="form-group">
-                                    <label class="required">Songwriter/Composer, Artist Name</label>
+                                    <label class="required">Artist Name</label>
                                     <input type="text" id="composerName" placeholder="Name you wish to be known by on soundtrack" required>
                                     <small style="color: #6c757d; font-size: 12px;">This is how you'll be credited</small>
                                 </div>
