Update WEB_APP_URL to the live script URL

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     </div>
 
     <script>
-        const WEB_APP_URL = 'YOUR_APPS_SCRIPT_WEB_APP_URL_HERE';
+        const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycby8ZPnnfR0SrC-rtjXDzTTES6G74DWPnzHIuCFxA_59D44v6WaMGVX1qw0XNGrYqKZyww/exec';
         let config = { webAppUrl: WEB_APP_URL };
         let trackCount = 0;
         let contributorCount = 0;
